--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -157,13 +157,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     font-size: 1.7rem;
     font-weight: 400;
 }
-.acc-helper-menu li {
-    float: left;
-    width: 36px;
+.material-icons font {
+    display:none;
 }
-.acc-helper-menu .quickSearch {
-    margin-top:-2px;
-    margin-left:5px;
-}
-
 
