--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -383,4 +383,9 @@
         margin-top:-2px;
         margin-left:5px;
     }
-
+    @media (max-width: 469px) {
+        .acc-helper-menu li {
+            float: none;
+            width: 36px;
+        }
+    }
