--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -387,5 +387,9 @@
         .acc-helper-menu li {
             float: none;
             width: 36px;
+            margin-left:0px;
+            padding-left:0px;
+            padding-bottom:15px;
+
         }
     }
