--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -387,13 +387,9 @@
         .acc-helper-menu {
             position:Absolute;
             left:10px;
+            top:15px;
         }
         .acc-helper-menu li {
-         
-            margin-left:0px;
-            padding-left:0px;
-            padding-bottom:15px;
-            max-height:40px;
 
         }
     }
