--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -388,8 +388,9 @@
             position:Absolute;
             left:10px;
             top:15px;
+            width:260px;
         }
         .acc-helper-menu li {
-
+            float:left;
         }
     }
