--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -384,6 +384,9 @@
         margin-left:5px;
     }
     @media (max-width: 469px) {
+        .site-header {
+            position:relative;
+        }
         .acc-helper-menu {
             position:Absolute;
             left:10px;
