--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -160,8 +160,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 .material-icons font {
     //display:none;
 }
-.btn btn-primary {
-    background:$palette-primary-green !important;
+.btn.btn-primary {
+    background:#006c7c!important;
     color:#fff !important;
 }
 
