check logo footer

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_footer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_footer.scss
@@ -22,5 +22,10 @@
     margin-top: 0;
     color:$palette-secondary-green;
 }
+.main-footer .logotype {
+    position:relative;
+    left:0px;
+    border:1px solid red;
+}
 
 
