--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -164,4 +164,9 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     background:#006c7c!important;
     color:#fff !important;
 }
+@media (max-width: 850px) {
+    .site-header {
+        min-height:150px;
+    }
+}
 
