--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -116,7 +116,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     text-decoration:none;
 }
 .home .ReadspeakerPlayer {
-    margin-left:15px;
+    position: Absolute;
+    top: 180px;
 
 }
 .home .readspeaker-play-button {
