read speaker mobile

--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -115,11 +115,20 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     content: 'hearing' !important;
     text-decoration:none;
 }
+
 .home .ReadspeakerPlayer {
     position: Absolute;
     top: 180px;
 
 }
+
+@media (max-width: 469px) {
+    .home .ReadspeakerPlayer {
+        position: Absolute;
+        top: 416px;
+    }
+}
+
 .home .readspeaker-play-button {
     max-width: 10px;
     width:10px;
