--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -117,15 +117,15 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 }
 
 .home .ReadspeakerPlayer {
-    position: Absolute;
+    position: absolute;
     top: 180px;
 
 }
 
 @media (max-width: 469px) {
     .home .ReadspeakerPlayer {
-        position: Absolute;
-        top: 416px;
+        position: absolute;
+        top: 120px !important;
     }
 }
 
