fix logo mobile

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -397,3 +397,8 @@
             float:left;
         }
     }
+    @media (max-width: 469px) {
+        #nsr-logo  {
+            margin-top:10px;
+        }
+    }
