--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -114,6 +114,8 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     font-family: "Material Icons" !important;
     content: 'hearing' !important;
     text-decoration:none;
+    display: inline-block;
+    position: relative; /*Added Line*/
 }
 
 .home .ReadspeakerPlayer {
