--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_navigation.scss
@@ -378,6 +378,8 @@
     .acc-helper-menu li {
         float: left;
         width: 36px;
+        display: inline-block;
+        position: relative; /*Added Line*/
     }
     .acc-helper-menu .quickSearch {
         margin-top:-2px;
