--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -116,6 +116,30 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     text-decoration:none;
     display: inline-block;
     position: relative; /*Added Line*/
+
+
+
+    font-weight: normal;
+    font-style: normal;
+
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+
 }
 
 .home .ReadspeakerPlayer {
