--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -111,7 +111,7 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     display:block !important;
 }
 .readspeaker-play-button:before {
-   
+
     text-decoration:none;
 
 }
@@ -143,19 +143,21 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
     font-weight: 400;
 }
 
-.mobile-search #readspeaker-play-button, .mobile-search #readspeaker-play-button:before {
-    display:none;
+.mobile-search #readspeaker-play-button,
+.mobile-search #readspeaker-play-button:before {
+    //display:none;
 }
-.home .mobile-search #readspeaker-play-button, .home .mobile-search #readspeaker-play-button:before {
-    display:block !important;
+.home .mobile-search #readspeaker-play-button,
+.home .mobile-search #readspeaker-play-button:before {
+    //display:block !important;
 }
 
 .home .mobile-search #readspeaker-play-button {
-    visibility: hidden;
+    //visibility: hidden;
 }
 
 .home .mobile-search #readspeaker-play-button:before {
-    visibility: visible !important;
+    //visibility: visible !important;
 }
 .material-icons .sync_sent {
     display:none;
