--- a/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/master.scss
@@ -153,11 +153,11 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist)
 }
 
 .home .mobile-search #readspeaker-play-button {
-    //visibility: hidden;
+    visibility: hidden;
 }
 
 .home .mobile-search #readspeaker-play-button:before {
-    //visibility: visible !important;
+    visibility: visible !important;
 }
 .material-icons .sync_sent {
     display:none;
