sortguide - one row solution, mobile version,

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -412,3 +412,10 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
   padding-left:0px;
   padding-left:26px;
 }
+@media (max-width: 450px) {
+  .tabMobile {
+    ul {
+      margin-top: 0!important;
+    }
+  }
+}
