changed pick address to pickUpName

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -135,3 +135,19 @@ a, p, label, input,
 blockquote {
     color:$palette-primary-darkgrey;
 }
+
+/* Icon fixes */
+.share {
+    li {
+        float:left;
+    }
+    .share-horizontal > li {
+        position: relative;
+        bottom: 0px;
+    }
+    .fa {
+        font-size: 22px;
+        margin: 0;
+
+    }
+}
