--- a/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
@@ -93,6 +93,7 @@
     // *** Plugins
     // ***************************************************************
     @import 'plugins/visualComposer';
+    @import 'plugins/gravityForms';
 
 
 
