--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/gravityForms.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/gravityForms.scss
@@ -15,8 +15,11 @@
     line-height: 1.3 !important;
 }
 
+
+
+
 .gform_body select:not([multiple]) {
-    background-image: url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiP…wxNDMuNiw1MTUuMSwxMjEsNTAyLjYsMTA3LjEKCUw1MDIuNiwxMDcuMXoiLz4KPC9zdmc+Cg==');
+    background-image: #{inline-image('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiP…wxNDMuNiw1MTUuMSwxMjEsNTAyLjYsMTA3LjEKCUw1MDIuNiwxMDcuMXoiLz4KPC9zdmc+Cg==')};
     background-size: 25px;
     background-repeat: no-repeat;
     background-position: 100%;
