--- a/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
@@ -94,6 +94,7 @@
     // ***************************************************************
     @import 'plugins/visualComposer';
     @import 'plugins/gravityForms';
+    @import 'plugins/customerFeedback';
 
 
 
