--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
@@ -5,5 +5,6 @@
     .pricon:before {
         content: '\E8AF';
         font-family: "Material Icons";
+        color:$palette-primary-green;
     }
 }
