custom feedback buttons

--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
@@ -7,4 +7,7 @@
         font-family: "Material Icons";
         color:$palette-primary-green;
     }
+    .btn, .btn-large {
+        background-color:$palette-primary-green;
+    }
 }
