notice succès bg color

--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
@@ -7,7 +7,8 @@
         font-family: "Material Icons";
         color:$palette-primary-green;
     }
-    .btn, .btn-large {
+    .btn, .btn-large, .notice.success {
         background-color:$palette-primary-green;
     }
+ 
 }
