--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -55,6 +55,7 @@ h1 {
     line-height:115%;
     padding:0px;
     padding-bottom:20px;
+    margin-top: 0 !important;
 }
 h2 {
     font-size: 2.92rem;
