--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -55,9 +55,10 @@ h1 {
     line-height:115%;
     padding:0px;
     padding-bottom:20px;
+    margin-top: 0.1em !important;
 
     &.single-nyheter {
-        margin-top: 0 !important;
+        margin-top: 0.3em !important;
     }
 }
 
