--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
@@ -2,6 +2,7 @@
     border-top: 1px solid #ededed;
     padding-left:15px;
     background-color: transparent !important;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
     .pricon:before {
         content: '\E8AF';
         font-family: "Material Icons";
