--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/customerFeedback.scss
@@ -1,8 +1,13 @@
 .customer-feedback-container {
-    border-top: 1px solid #ededed;
+    margin: .5rem 0 1rem 0;
+    border: 1px solid #e0e0e0;
+    border-radius: 2px;
+    overflow: hidden;
+    position: relative;
     padding-left:15px;
     background-color: transparent !important;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
+
     .pricon:before {
         content: '\E8AF';
         font-family: "Material Icons";
