--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -58,7 +58,7 @@
     max-width:100% !important;
 }
 .customer-feedback-container {
-
+    max-width:800px;
     margin: .5rem 0 1rem 0 !important;
     border: 1px solid #e0e0e0 !important;
     border-radius: 2px !important;
