search table head, feedback textareas

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -71,4 +71,7 @@
     .gutter.gutter-top:not(.gutter-margin) {
         margin-bottom:20px;
     }
+    textarea {
+        border:1px solid #cdcdcd;
+    }
 }
