--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -65,13 +65,14 @@
     overflow: hidden !important;
     position: relative !important;
     padding-left: 15px !important;
-    background-color: transparent !important;
+    background-color: #f9f9f9 !important;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2) !important;
 
     .gutter.gutter-top:not(.gutter-margin) {
         margin-bottom:20px;
     }
     textarea {
-        border:1px solid #cdcdcd;
+        border:1px solid #cdcdcd !important;
+        width:95%;
     }
 }
