--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -71,7 +71,7 @@
     .gutter.gutter-top:not(.gutter-margin) {
         margin-bottom:20px;
     }
-    textarea {
+    textarea, input {
         border:1px solid #cdcdcd !important;
         width:95%;
     }
