feedback form backgrounds

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -73,6 +73,7 @@
     }
     textarea, input {
         border:1px solid #cdcdcd !important;
+        background-color:#fff !important;
         width:95%;
     }
 }
