feedback landing pages.

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_home.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_home.scss
@@ -15,7 +15,7 @@ footer {
   }
 }
 
-.customer-feedback-container {
+.customer-feedback-container, &.page-template-full-width-blade .customer-feedback-container{
   display:none;
 }
 
