--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_home.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_home.scss
@@ -14,8 +14,10 @@ footer {
     display:none;
   }
 }
-
-.customer-feedback-container, &.page-template-full-width-blade .customer-feedback-container{
+&.page-template-full-width-blade .customer-feedback-container {
+  display:none;
+}
+.customer-feedback-container{
   display:none;
 }
 
