line height collapsible header

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -208,3 +208,11 @@ article {
         border:none !important;
     }
 }
+
+@media only screen and (max-width: 450px) {
+
+    .collapsible-header {
+        font-size: 15px;
+    }
+
+}
