composer lists icon

--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -39,3 +39,8 @@
   margin: .5rem 0 1rem 0 !important;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2) !important;
 }
+
+.wpb-js-composer .vc_tta.vc_tta-accordion .vc_tta-controls-icon-position-left .vc_tta-controls-icon {
+  right:20px;
+  left:auto;
+}
