--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -41,6 +41,6 @@
 }
 
 .wpb-js-composer .vc_tta.vc_tta-accordion .vc_tta-controls-icon-position-left .vc_tta-controls-icon {
-  right:20px;
-  left:auto;
+  right:20px !important;
+  left:auto !important;
 }
