--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -50,7 +50,7 @@
 }
 
 @media only screen and (max-width: 450px) {
-    .vc_tta-panel-title vc_tta-controls-icon-position-left {
-        max-width:70%;
+    .vc_tta-accordion h4 {
+        max-width:70% !important;
     }
 }
