--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -50,7 +50,8 @@
 }
 
 @media only screen and (max-width: 450px) {
-    .vc_tta-accordion h4 {
+    .vc_tta-accordion span {
+        position:relative;
         max-width:70% !important;
     }
 }
