--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -50,7 +50,7 @@
 }
 
 @media only screen and (max-width: 450px) {
-    .vc_tta-accordion h4 div {
+    .vc_tta-accordion h4 span {
         position: relative !important;
         display: inline-block !important;
         width: 215px!important;
