--- a/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/plugins/visualComposer.scss
@@ -53,7 +53,7 @@
     .vc_tta-accordion h4 span {
         position: relative !important;
         display: inline-block !important;
-        width: 215px!important;
+        width: 75%!important;
         font-weight:bold;
     }
 }
