--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -894,6 +894,11 @@ td, tr {
     .searchArea .spinner-layer {
         border-color: $white !important;
     }
+    .meta-fraktion li {
+        float:none !important;
+        clear:both !important;
+        width:100% !important;
+    }
 }
 
 .viewAllInlamning {
