--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -899,6 +899,9 @@ td, tr {
         clear:both !important;
         width:100% !important;
     }
+    .searchNSR .sorterings-guide-table li, .searchNSR .sorterings-guide-table ul {
+        display: block !important;
+    }
 }
 
 .viewAllInlamning {
