done with open hours 2.0

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -241,6 +241,11 @@ li.before {
   font-size: 0.8em;
 }
 
+.openhours .small-offset {
+  font-size: 0.8em;
+  top: 0px;
+}
+
 .gform_wrapper input[type=checkbox] + label, .gform_wrapper input[type=radio] + label {
   padding-left: 25px;
 }
