--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -42,6 +42,14 @@
         }
 
     }
+
+    .wpb_content_element ul {
+        list-style-type: disc;
+        padding-left: 30px!important;
+        li {
+            list-style-type: disc;
+        }
+    }
     @media only screen and (max-width: 600px) {
 
     }
