Final fix for dot lists in footer

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_footer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_footer.scss
@@ -39,7 +39,7 @@
     left:0px;
 }
 
-.vcmega-container .wpd_content_element ul {
+.vcmega-container .wpb_column ul {
     padding-left: 0!important;
 }
 
