removed that Lato!important was added to all elements via * selector in _typography.scss

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -2,10 +2,9 @@
 // *** Primary links & Typography
 // ***************************************************************
 
-* {
+/** {
     @include font('Lato', 400);
-
-}
+}*/
 
 .material-icons {
     @include font('Material Icons', 400);
