--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/overwrite.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/overwrite.scss
@@ -1,3 +1,10 @@
 body {
     @include font('Lato', 400);
 }
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 2rem;
+        min-height:80px;
+    }
+}
