--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/overwrite.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/overwrite.scss
@@ -3,7 +3,7 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-    h1 {
+    .is-child-theme h1 {
         font-size: 2rem;
         min-height:80px;
     }
