--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -136,6 +136,7 @@
             bottom: 100%;
             right: 4%;
             margin-left: -5px;
+            margin-bottom:-1px;
             border-width: 11px;
             border-style: solid;
             border-color: transparent transparent $palette-primary-white transparent;
