--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_header.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_header.scss
@@ -1,23 +1,27 @@
 .site-header {
-    background-color:$palette-primary-grey;
+    background-color: $palette-primary-grey;
     border-bottom: 1px solid alpha-color($palette-primary-grey, 10%, $type: 'dark');
 
 }
 
-@media screen and (min-width:769px) {
-    .site-header>.container>.grid [class*=grid-] {
-        display:block;
+@media screen and (min-width: 769px) {
+    .site-header > .container > .grid [class*=grid-] {
+        display: block;
     }
 }
 
-.site-header>.container {
+.site-header > .container {
     padding: 0px 0;
 }
 
 &.nsr-background-white header {
-    background-color:$palette-primary-grey;
-}
-&.nsr-background-grey header {
-    background-color:$palette-primary-white;
+    background-color: $palette-primary-grey;
 }
 
+&.nsr-background-grey header {
+    background-color: $palette-primary-white;
+}
+
+.mobileNav .quickSearch {
+    display: none;
+}  
