--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -645,6 +645,9 @@ input[type=text]:focus.invalid {
             tr:last-child {
                 display: none;
             }
+            &.hide {
+                display:none !important;
+            }
 
         }
 
