hide search återvinningsställen

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -645,7 +645,7 @@ input[type=text]:focus.invalid {
             tr:last-child {
                 display: none;
             }
-            &.hide {
+            li.hide {
                 display:none !important;
             }
 
