search fullscreen mobile top position

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -350,6 +350,10 @@ input[type=text]:focus.invalid {
         display: table;
         transition: all 500ms ease;
 
+        @media (max-width: 450px) {
+            top: 101px;
+        }
+
     }
 
     table tbody {
